--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </p>
       <p class="text-detalle">
         El dataSet se trabajo con su respectivo análisis para la materia de
-        06MBID Estadística avanzada con las siguientes característica
+        06MBID Estadística avanzada con las siguientes característica.
       </p>
     </div>
   </body>
