grafica desde sheet

--- a/index.html
+++ b/index.html
@@ -75,6 +75,35 @@
         El dataSet se trabajo con su respectivo análisis para la materia de
         06MBID Estadística avanzada con las siguientes característica.
       </p>
+      <div class="div_imagen">
+        <img
+          class="img_grafico"
+          src="https://github.com/Angelo-Ponce/08MBID-VD-Trabajo/blob/main/Graficos/head_data.PNG?raw=true"
+          alt=""
+        />
+      </div>
+      <h3 class="center-text">Descripción de los datos</h3>
+      <p class="text-detalle">
+        El conjunto de datos con el que se va a trabajar contiene el número de
+        incendios forestales en Brasil desde 1998 hasta el 2017.
+      </p>
+      <p class="text-detalle">
+        Los datos están divididos por año, meses y estados de Brasil.
+      </p>
+      <p class="text-detalle">
+        A continuación, se describe el dataset con el que se va a trabajar.
+      </p>
+      <ul>
+        <li><b>Year: </b> Año en que ocurren los incendios forestales.</li>
+        <li><b>State: </b> Estados brasileños.</li>
+        <li><b>Month: </b> Mes en que ocurren los incendios forestales.</li>
+        <li><b>Number: </b> Número de Incendios Forestales reportados.</li>
+      </ul>
+
+      <div class="div_imagen">
+      <iframe class="img_grafico" width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZZfmlOPhZEv0hoX_rHHGG2toAGXLDiPZx0Ne3msfAJaiAfZO_gohYKqGwIO4jbA/pubchart?oid=925602769&amp;format=interactive"></iframe>
+      </div>
+
     </div>
   </body>
   <p class="text-detalle"></p>
