comentario de grafico de columnas

--- a/index.html
+++ b/index.html
@@ -100,11 +100,23 @@
         <li><b>Number: </b> Número de Incendios Forestales reportados.</li>
       </ul>
 
+      <h2 class="center-text">Gráfica de columnas</h2>
       <div class="div_imagen">
-      <iframe class="img_grafico" width="600" height="371" seamless frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZZfmlOPhZEv0hoX_rHHGG2toAGXLDiPZx0Ne3msfAJaiAfZO_gohYKqGwIO4jbA/pubchart?oid=925602769&amp;format=interactive"></iframe>
+        <iframe
+          class="img_grafico"
+          width="600"
+          height="371"
+          seamless
+          frameborder="0"
+          scrolling="no"
+          src="https://docs.google.com/spreadsheets/d/e/2PACX-1vRZZfmlOPhZEv0hoX_rHHGG2toAGXLDiPZx0Ne3msfAJaiAfZO_gohYKqGwIO4jbA/pubchart?oid=925602769&amp;format=interactive"
+        ></iframe>
       </div>
-
+      <p class="text-detalle">
+        Con la gráfica anterior se puede observar que la temporada de mayor
+        cantidad de incendio es desde Julio hasta noviembre.
+      </p>
     </div>
   </body>
-  <p class="text-detalle"></p> 
+  <p class="text-detalle"></p>
 </html>
