--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         cantidad muy elevada de incendios forestales
       </p>
 
-      <p class="text-detalle">Gráfica por mes y año</p>
+      <h2 class="center-text">Gráfica de columnas por mes y año</h2>
       <div class="div_imagen">
         <img
           class="img_grafico"
@@ -184,6 +184,12 @@
           alt=""
         />
       </div>
+      <p class="text-detalle">
+        Con esta gráfica se puede observar que el mes de diciembre también hay
+        incendios forestales, pero no se vio reflejada en la serie temporal por
+        mes, debido que el año 2017 no se tienen datos para el mes de diciembre.
+      </p>
+      <p class="text-detalle">Para la realización de la siguiente Gráfica se desarrollo el código en R Studio</p>
     </div>
   </body>
   <p class="text-detalle"></p>
