--- a/index.html
+++ b/index.html
@@ -189,7 +189,43 @@
         incendios forestales, pero no se vio reflejada en la serie temporal por
         mes, debido que el año 2017 no se tienen datos para el mes de diciembre.
       </p>
-      <p class="text-detalle">Para la realización de la siguiente Gráfica se desarrollo el código en R Studio</p>
+      <p class="text-detalle">
+        Para la realización de la siguiente Gráfica se desarrollo el código en R
+        Studio
+        <a
+          href="https://github.com/Angelo-Ponce/08MBID-VD-Trabajo/blob/main/Graficos/CodigoGraficoMes_Anio.PNG?raw=true"
+          >Enlace código</a
+        >
+      </p>
+      <h2 class="center-text">Conclusión</h2>
+      <p class="text-detalle">
+        Se puede concluir que el segundo semestre del año por lo general hay
+        aumento de incendios forestales en comparación al primer semestre.
+      </p>
+      <p class="text-detalle">
+        Con la gráfica de linea se es posible comparar la evolución de los
+        incendios forestales, cabe mencionar que el dataSet no está actualizado
+        hasta la presente fecha.
+      </p>
+      <p class="text-detalle">
+        Para trabajos futuros podría representarse la cantidad de incendios que
+        se tiene por estado en comparación del mes y año.
+      </p>
+      <h3>Enlaces</h3>
+      <ul>
+        <li>
+          <a
+            href="https://docs.google.com/spreadsheets/d/1UZqLbI1okOMBsITtPn2Y-6rWb5AxOXMQ/edit?usp=sharing&ouid=103055105484682296589&rtpof=true&sd=true"
+            ><b>Google Sheets</b></a
+          >
+        </li>
+        <li>
+          <a
+            href="https://github.com/Angelo-Ponce/08MBID-VD-Trabajo/blob/main/Graficos/CodigoGraficoMes_Anio.PNG?raw=true"
+            ><b>R Studio</b></a
+          >
+        </li>
+      </ul>
     </div>
   </body>
   <p class="text-detalle"></p>
