Enlace de graficas

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         Para trabajos futuros podría representarse la cantidad de incendios que
         se tiene por estado en comparación del mes y año.
       </p>
-      <h3>Enlaces</h3>
+      <h3>Enlaces de Gráficas</h3>
       <ul>
         <li>
           <a
