--- a/index.html
+++ b/index.html
@@ -6,28 +6,30 @@
   <body>
     <div class="body-main">
       <header>
-        <table>
-          <tr>
-            <td rowspan="4">
-              <img
-                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG0LSU20JCX7v7iAIc0FrPRJOloXv20rr1ZRV2DE6IuDXZwVc5Vf9awP7-mfHQXQl7BSI&usqp=CAU"
-                alt="drawing"
-                style="width: 180px"
-              />
-            </td>
-          </tr>
-          <tr>
-            <td class="style-head">
-              <b>Maestria en Big Data y Ciencia de Datos</b>
-            </td>
-          </tr>
-          <tr class="style-head">
-            <td>08MBID Visualización de Datos</td>
-          </tr>
-          <tr class="style-head">
-            <td>Autor: Angelo Ponce Figueroa</td>
-          </tr>
-        </table>
+        <div class="div-header">
+          <table>
+            <tr>
+              <td rowspan="4">
+                <img
+                  src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQG0LSU20JCX7v7iAIc0FrPRJOloXv20rr1ZRV2DE6IuDXZwVc5Vf9awP7-mfHQXQl7BSI&usqp=CAU"
+                  alt="drawing"
+                  style="width: 180px"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td class="style-head">
+                <b>Maestria en Big Data y Ciencia de Datos</b>
+              </td>
+            </tr>
+            <tr>
+              <td class="style-head">08MBID Visualización de Datos</td>
+            </tr>
+            <tr>
+              <td class="style-head">Autor: Angelo Ponce Figueroa</td>
+            </tr>
+          </table>
+        </div>
         <h1 class="center-text">Trabajo Práctico</h1>
       </header>
 
@@ -54,14 +56,15 @@
       </p>
       <h2 class="center-text">Audiencia</h2>
       <p class="text-detalle">
-        El presente trabajo esta orientado a las personas que buscan comprender
-        con que frecuencia se presentan los incendios forestales en Brasil, mas
+        El presente trabajo está orientado a las personas que buscan comprender
+        con qué frecuencia se presentan los incendios forestales en Brasil, más
         que todo en sus respectivos estados.
       </p>
       <p class="text-detalle">
-        Se otorgara los detalles del analisis para que se pueda comprender que
+        Se otorgará los detalles del análisis para que se pueda comprender que
         factores son los que lo producen.
       </p>
+      <br />
       <h2 class="center-text">DataSet</h2>
       <p class="text-detalle">
         El dataSet es obtenido de
@@ -72,8 +75,8 @@
         >
       </p>
       <p class="text-detalle">
-        El dataSet se trabajo con su respectivo análisis para la materia de
-        06MBID Estadística avanzada con las siguientes característica.
+        El dataSet se trabajó con su respectivo análisis para la materia de
+        06MBID Estadística avanzada con las siguientes características.
       </p>
       <div class="div_imagen">
         <img
@@ -190,7 +193,7 @@
         mes, debido que el año 2017 no se tienen datos para el mes de diciembre.
       </p>
       <p class="text-detalle">
-        Para la realización de la siguiente Gráfica se desarrollo el código en R
+        Para la realización de la siguiente Gráfica se desarrolló el código en R
         Studio
         <a
           href="https://github.com/Angelo-Ponce/08MBID-VD-Trabajo/blob/main/Graficos/CodigoGraficoMes_Anio.PNG?raw=true"
@@ -203,7 +206,7 @@
         aumento de incendios forestales en comparación al primer semestre.
       </p>
       <p class="text-detalle">
-        Con la gráfica de linea se es posible comparar la evolución de los
+        Con la gráfica de línea se es posible comparar la evolución de los
         incendios forestales, cabe mencionar que el dataSet no está actualizado
         hasta la presente fecha.
       </p>
@@ -223,6 +226,20 @@
           <a
             href="https://github.com/Angelo-Ponce/08MBID-VD-Trabajo/blob/main/Graficos/CodigoGraficoMes_Anio.PNG?raw=true"
             ><b>R Studio</b></a
+          >
+        </li>
+      </ul>
+
+      <h3>Proyecto</h3>
+      <ul>
+        <li>
+          <a href="https://js-wfwvjp.stackblitz.io"
+            ><b>Aplicación Stackblitz</b></a
+          >
+        </li>
+        <li>
+          <a href="https://github.com/Angelo-Ponce/08MBID-VD-Trabajo"
+            ><b>Repositorio GitHub</b></a
           >
         </li>
       </ul>
