--- a/index.html
+++ b/index.html
@@ -197,9 +197,17 @@
         Studio
         <a
           href="https://github.com/Angelo-Ponce/08MBID-VD-Trabajo/blob/main/Graficos/CodigoGraficoMes_Anio.PNG?raw=true"
-          >Enlace código</a
+          >Imagen código</a
         >
       </p>
+      <p class="text-detalle">
+        Fuente:
+        <a
+          href="https://github.com/Angelo-Ponce/06MBID_Estadistica-avanzada/blob/main/Actividad_2/06MBIDAct2_SerieTemporal.R"
+          >Código</a
+        >
+      </p>
+
       <h2 class="center-text">Conclusión</h2>
       <p class="text-detalle">
         Se puede concluir que el segundo semestre del año por lo general hay
